@@ -137,6 +137,32 @@ body {
 .prepend-23  { padding-left: 920px; } 
 
 
+/* Use a .box to create a padded box inside a column. 
+   Sticking to the the baseline. */ 
+   
+.box { 
+  padding: 18px; 
+  margin-bottom: 18px; 
+  background: #f0f0f0; 
+}
+
+
+/* Clearing floats without extra markup
+   Based on How To Clear Floats Without Structural Markup by PiE
+   [http://www.positioniseverything.net/easyclearing.html] */
+
+.clear { display: inline-block; }   
+.clear:after, .container:after {
+    content: "."; 
+    display: block; 
+    height: 0; 
+    clear: both; 
+    visibility: hidden;
+}
+* html .clear { height: 1%; }
+.clear { display: block; }
+
+
 /* Images
 -------------------------------------------------------------- */
 
